@@ -22,6 +22,7 @@
 /* Externs. */
 
 #include <sys/stat.h>
+#include <sys/types.h>
 #ifdef HAVE_REGEX_H
 #include <regex.h>
 #endif
